# have-fun

./: .dockerignore  .gitignore  README.md  TODO.md  docker-compose.yml
backend/: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  TODO.md  go.mod  init_db.sh
backend/core/: Cargo.toml
backend/core/src/: config.rs  database.rs  lib.rs  middleware.rs  utils.rs
backend/gateway/: Cargo.toml  README.md
backend/gateway/src/: client.rs  grpc_client.rs  grpc_clients.rs  handlers.rs  main.rs  router.rs  routes.rs  state.rs
backend/gateway/src/client/: user.rs
backend/gateway/src/controller/: mod.rs  user_handler.rs
backend/gateway/src/dto/: user.rs
backend/gateway/src/handlers/: mod.rs  user.rs  user_handler.rs
backend/gateway/src/routes/: mod.rs  user.rs  user_routes.rs
backend/libs/common-go/: common.go  go.mod  go.sum
backend/libs/proto/: common.proto  health.proto  user.proto
backend/proto/: Cargo.toml  build.rs  health.proto
backend/proto/product/v1/: product.proto
backend/proto/service/chat/v1/: chat.proto
backend/proto/service/user/v1/: user.proto
backend/proto/src/: lib.rs
backend/proto/user/v1/: user.proto
backend/scripts/: dev.sh  init_db.sh  reset_db.sh  test_gateway.sh  test_health.sh  test_user.sh
backend/services/chat/: Cargo.toml
backend/services/chat/src/: main.rs
backend/services/product/: Cargo.toml  build.rs
backend/services/product/src/: grpc.rs  handler.rs  lib.rs  main.rs  rest.rs  server.rs
backend/services/user/: Cargo.toml  README.md  go.mod  main.go
backend/services/user-service/: Cargo.toml  build.rs  test_crud.sh
backend/services/user-service/migrations/: 20250704135506_init.sql  20250707110231_create_user_table.sql
backend/services/user-service/src/: config.rs  db.rs  handlers.rs  main.rs  routes.rs  state.rs
backend/services/user/src/: handler.rs  lib.rs  main.rs  models.rs  repository.rs  routes.rs  service.rs  service_impl.rs  services.rs
backend/shared/: Cargo.toml  README.md
backend/shared/core/: Cargo.toml
backend/shared/core/src/: config.rs  database.rs  error.rs  lib.rs  signal.rs  state.rs
backend/shared/src/: config.rs  constants.rs  database.rs  errors.rs  lib.rs  models.rs  utils.rs
backend/user-service/: .dockerignore  Cargo.toml
backend/user-service/src/: main.rs
frontend/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  user.ts
frontend/src/components/: StreamStatus.tsx  UserFrom.tsx  UserTable.tsx
frontend/src/hooks/: useUsers.ts
frontend/src/pages/: Home.tsx  UserList.tsx
frontend/src/services/: userService.ts
