[workspace]
resolver = "2"
members = ["gateway", "services/user", "shared", "proto"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web & gRPC
axum = "0.7"
tonic = "0.11"
tonic-build = "0.11"
tonic-reflection = "0.11"
prost = "0.12"
futures = "0.3"

# Database & UUID
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"

# Serialization
serde = "1"

# Logging & error handling
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"

# Env variables
dotenvy = "0.15"
