[workspace]
resolver = "2"
members = ["gateway", "services/user", "shared", "proto"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.26", features = ["full"] }
tokio-stream = "0.1.17"
async-stream = "0.3.6"

# Web & gRPC
axum = { version = "0.7.9", features = ["macros"] }
tonic = "0.12.3"
tonic-build = "0.12.3"
tonic-reflection = "0.12.3"
prost = "0.13.5"
tower-http = { version = "0.6.6", features = ["cors"] }

# Database & UUID
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
] }
uuid = { version = "1", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

# Logging & error handling
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
thiserror = "2.0.16"

# Env variables
dotenvy = "0.15.7"
