[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
proto = { path = "../proto" }

tokio = { workspace = true }
tonic = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "client"
path = "src/client.rs"
