[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
proto = { path = "../proto" }

tokio = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tower-http = { workspace = true }
