[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
proto = { path = "../proto" }

tokio = { workspace = true }
tonic-reflection = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
