[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.46", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"] }

num_cpus = "1.16"
dotenvy = "0.15"

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
