[package]
name = "chat"
version = "0.1.0"
edition = "2024"

[dependencies]
proto = { path = "../../proto" }
shared = { path = "../../shared" }

# app
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }

# database
uuid = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }

# log
tracing = { workspace = true }
