# service USER toml

[package]
name = "user"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
core = { path = "../../shared/core" }

axum = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
