[package]
name = "user"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../../shared" }
proto = { path = "../../proto" }

tokio = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
