[package]
name = "user"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../../shared" }
proto = { path = "../../proto" }

# core
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }

tonic = { workspace = true }
tonic-reflection = { workspace = true }


# database
uuid = { workspace = true }
sqlx = { workspace = true }
# chrono = { workspace = true }
dotenvy = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
